--- a/weatherBySteven/src/index.css
+++ b/weatherBySteven/src/index.css
@@ -268,6 +268,13 @@ body {
     box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
 }
 
+#credit {
+    height: 2vh;
+    display: grid;
+    place-items: center;
+    color: rgba(250,250,250,0.5);
+}
+
 /* ------------------------------------
    ----------- ANIMATIONS -------------
    ------------------------------------ */
