--- a/weatherBySteven/src/index.css
+++ b/weatherBySteven/src/index.css
@@ -23,17 +23,36 @@ body {
     flex-direction: column;
     width: 100vw;
     height: 100vh;
-    overflow-y: hidden;
 }
 
 /* --------- LOCATION INPUT ---------*/
 
-#zipChange {
+#appHeader {
     position: fixed;
-    top: 5px;
-    left: 50vw;
-    width: 50%;
-    transform: translateX(-50%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 20px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #195160;
+    z-index: 3;
+}
+#logoBox {
+    color:var(--darkBlue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: -40px;
+    font-size: small;
+}
+#logo {
+    height: 100%;
+    width: 30px;
+}
+#zipChange {
+    width: 50vw;
     padding: 5px;
     text-align: center;
     color: white;
@@ -44,7 +63,7 @@ body {
 }
 #zipChange~label {
     position: fixed;
-    top: 60px;
+    top: 70px;
     left: 20%;
     width: 60%;
     height: 50px;
@@ -57,9 +76,9 @@ body {
     opacity: 0;
     transition: all 0.6s;
 }
-#zipChange:focus {
-    transform: scale(1.2) translateX(-42%);
-    transform-origin: center;
+#zipChange:focus,
+#zipChange:hover {
+    scale: 1.1;
     transition: all 0.4s ease-in-out;
 }
 #zipChange:focus ~label {
@@ -67,16 +86,14 @@ body {
     transform: translateY(0);
 }
 #crosshairs{
-    position: fixed;
-    transform: scale(1.5);
     color: rgba(250,250,250,0.2);
-    top: 12px;
-    right: 12px;
+    scale: 1.5;
     padding: 5px;
     cursor: pointer;
     transition: color 0.2s;
 }
-#crosshairs:active {
+#crosshairs:active,
+#crosshairs:hover {
     color: skyblue;
 }
 
@@ -269,9 +286,11 @@ body {
 }
 
 #credit {
-    height: 2vh;
+    font-size: x-small;
     display: grid;
     place-items: center;
+    padding: 5px 0;
+    background-color: var(--darkBlue);
     color: rgba(250,250,250,0.5);
 }
 
